adicionado teste para implementações futuras

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,5 +46,7 @@
         "streambuf": "cpp",
         "typeinfo": "cpp",
         "sstream": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled",
+    "cmake.configureOnOpen": false
 }
